--- a/Solving_Knapsack_problems_using_Python_and_OR_tools_.ipynb
+++ b/Solving_Knapsack_problems_using_Python_and_OR_tools_.ipynb
@@ -124,7 +124,7 @@
         "id": "R0Um5Q4ks4iT"
       },
       "source": [
-        "#create the mip solver \n",
+        "#create the solver \n",
         "solver = pywraplp.Solver.CreateSolver('CP_SAT')"
       ],
       "execution_count": 2,
